RESOLVED FIXED281378
[JSC] DFG::AbstractHeap initialization from pointer is broken on armv7
https://bugs.webkit.org/show_bug.cgi?id=281378
Summary [JSC] DFG::AbstractHeap initialization from pointer is broken on armv7
Max Rottenkolber
Reported 2024-10-12 07:01:12 PDT
DFG::AbstractHeap initialization from pointer is broken on armv7 as it sign extends pointer values when widening from intptr_t to int64_t.
Attachments
EWS
Comment 1 2024-10-17 03:12:29 PDT
Committed 285323@main (69218f370db8): <https://commits.webkit.org/285323@main> Reviewed commits have been landed. Closing PR #35104 and removing active labels.
Radar WebKit Bug Importer
Comment 2 2024-10-17 03:13:15 PDT
Note You need to log in before you can comment on or make changes to this bug.