[JSC] Fix DFG::AbstractHeap initialization from pointer on armv7 https://bugs.webkit.org/show_bug.cgi?id=281378

Reviewed by Justin Michaud.

The previous incantation would cause 32 bit pointers to be
sign extended into a int64_t slot. We want to widen then
value without sign extension here, as the higher bits will
be used for a tag. (See encode())

* Source/JavaScriptCore/dfg/DFGAbstractHeap.h:
(JSC::DFG::AbstractHeap::Payload::Payload):

Canonical link: https://commits.webkit.org/285323@main